--- a/src/App.css
+++ b/src/App.css
@@ -72,3 +72,62 @@ form {
     transform: rotate(360deg);
   }
 }
+
+/* Path: PruebasHumanamente/my-psychometric-test/src/App.css */
+.test-buttons-container {
+  display: flex; /* Utiliza Flexbox para alinear los botones */
+  gap: 10px; /* Espacio entre los botones */
+  justify-content: center; /* Centra los botones horizontalmente */
+  flex-wrap: wrap; /* Permite que los botones se ajusten al tamaño de la pantalla */
+  margin-bottom: 30px; /* Espacio debajo de la barra de botones */
+}
+
+.test-button {
+  padding: 10px 15px;
+  background-color: #004466; /* Azul marino */
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.3s;
+  font-size: 16px;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); /* Sombra para todos los botones */
+  transform: translateY(0); /* Inicio sin transformación en Y */
+}
+
+.test-button[disabled] {
+  background-color: #ccc; /* Gris para botones deshabilitados */
+}
+
+.test-button:not([disabled]):hover {
+  background-color: #003366; /* Azul más claro para hover */
+  transform: scale(1.05); /* Aumenta ligeramente el tamaño */
+  background-color: #0077CC; /* Azul claro para hover y focus */
+}
+
+.test-button:active {
+  transform: translateY(2px); /* Desplaza hacia abajo al hacer clic */
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2); /* Sombra más pequeña al hacer clic */
+}
+
+.active-test {
+  background-color: #026AA7; /* Azul más oscuro para el test activo */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3); /* Sombra más prominente para el test activo */
+}
+.test-button.active-test {
+  background-color: #011b35; /* Azul más oscuro para el test activo */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para resaltar */
+  animation: pulse-animation 0.9s infinite;
+}
+
+@keyframes pulse-animation {
+  0% {
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  50% {
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.4);
+  }
+  100% {
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  }
+}
