--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   min-height: 100vh;
   /* Otros estilos... */
 }
+
 form {
   width: 100%; /* O el ancho máximo que desees para tu formulario */
   max-width: 400px; /* Un ancho máximo para que no se vea muy ancho en pantallas grandes */
@@ -14,6 +15,7 @@ form {
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra suave para darle un aspecto elevado */
 }
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -114,6 +116,7 @@ form {
   background-color: #026AA7; /* Azul más oscuro para el test activo */
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3); /* Sombra más prominente para el test activo */
 }
+
 .test-button.active-test {
   background-color: #011b35; /* Azul más oscuro para el test activo */
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Sombra para resaltar */
@@ -130,4 +133,42 @@ form {
   100% {
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   }
+}
+
+/* apartado de animaciones al finalizar la prueba */
+.spinner {
+  border: 4px solid rgba(255, 255, 255, 0.3);
+  border-radius: 50%;
+  border-top: 4px solid #3498db;
+  width: 40px;
+  height: 40px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.transition-screen {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  flex-direction: column;
+}
+
+.spinner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px; /* Ajusta según tus necesidades */
+  margin-top: 20px; /* Ajusta según tus necesidades */
 }
